fix: fix typo in router
