# docs/swagger.yaml
@@ -13,7 +13,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: the [(timetsamp,profit)] in the time range
+          description: the [(timestamp,profit)] in the time range
       summary: get the phased profit info
   /api/v1/chart/ratio:
     get:
@@ -37,12 +37,12 @@ paths:
         "200":
           description: the [(timestamp,volume)] in the time range
       summary: get the total volume info
-  /api/v1/price_info/{coin_ids}:
+  /api/v1/price_info/{coin}:
     get:
       parameters:
       - description: '{BTC,ETH,USDT,HT,MDX}'
         in: path
-        name: coin_ids
+        name: coin
         required: true
         type: string
       produces:
@@ -50,6 +50,7 @@ paths:
       responses:
         "200":
           description: 'the price trend of coin, {"rate": ..., "trend": ...}'
+      summary: get the Coin Price info and trend
   /api/v1/transaction/{address}:
     get:
       parameters:
@@ -78,5 +79,9 @@ paths:
       responses:
         "200":
           description: the transaction of the page
+        "400":
+          description: Invalid params
+        "500":
+          description: Server error
       summary: get the transaction info
 swagger: "2.0"
